// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification component pagination should render correctly 1`] = `
<Component
  action={null}
  className="notification-item"
  id="Foo"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  title="Bar"
  variant="success"
>
  description
</Component>
`;

exports[`Notification component should render correctly 1`] = `
<Component
  action={null}
  className="notification-item"
  id="Foo"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  title="Bar"
  variant="success"
>
  description
</Component>
`;

exports[`Notification component should render correctly with HTML description 1`] = `
<Component
  action={null}
  className="notification-item"
  id="Foo"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  title="Bar"
  variant="success"
>
  Some textanother
</Component>
`;

exports[`Notification component should render correctly with HTML title 1`] = `
<Component
  action={null}
  className="notification-item"
  id="Foo"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  title="Some textanother"
  variant="success"
>
  description
</Component>
`;

exports[`Notification component should render correctly with dismiss button 1`] = `
<Component
  action={
    <Unknown
      aria-label="close-notification"
      onClick={[Function]}
      variant="plain"
    >
      <CloseIcon
        color="currentColor"
        noVerticalAlign={false}
        size="sm"
        title={null}
      />
    </Unknown>
  }
  className="notification-item"
  id="Foo"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  title="Bar"
  variant="success"
/>
`;

exports[`Notification component should render correctly with sentryId 1`] = `
<Component
  action={null}
  className="notification-item"
  id="Foo"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  title="Bar"
  variant="success"
>
  description
  <TextContent>
    <Text
      component="small"
    >
      Tracking Id: 
      some-UUID
    </Text>
  </TextContent>
</Component>
`;

exports[`Notification component should render correctly withouth description 1`] = `
<Component
  action={null}
  className="notification-item"
  id="Foo"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  title="Bar"
  variant="success"
/>
`;
